--- a/insaerospace/main/templates/main/nos-projets.html
+++ b/insaerospace/main/templates/main/nos-projets.html
@@ -10,6 +10,9 @@
 
 
 {% block content %}
+<div class="classic-page-margin">
+    <h1  class="page-title">Nos projets</h1>
+</div>
 <div id="projectsContainer"></div>
 <script type="module" src="{% static 'main/scripts/projets.js' %}"></script>
 
