--- a/insaerospace/main/templates/main/nos-membres.html
+++ b/insaerospace/main/templates/main/nos-membres.html
@@ -5,13 +5,16 @@
 
 
 {% block extrahead %}
-
+<link rel="stylesheet" href="{% static 'main/membres.css' %}">
 {% endblock %}
 
 {% block content %}
-<h1>Notre équipe</h1>
+<div class="classic-page-margin">
+    <h1 class="page-title">Notre équipe</h1>
 
-<div id="membresContainer"></div>
-<script type="module" src="{% static 'main/scripts/membres.js' %}"></script>
+    <div id="membresContainer"></div>
+    <script type="module" src="{% static 'main/scripts/membres.js' %}"></script>
+
+</div>
 
 {% endblock %}
