feat: add loading indicators to various pages with CSS styling for better user experience

--- a/insaerospace/main/static/main/base.css
+++ b/insaerospace/main/static/main/base.css
@@ -107,6 +107,14 @@ header>*, header>*>* {
 
 }
 
+div.loaderBox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
 
 header {
     display: flex;
