--- a/insaerospace/main/templates/main/nos-membres.html
+++ b/insaerospace/main/templates/main/nos-membres.html
@@ -12,7 +12,12 @@
 <div class="classic-page-margin">
     <h1 class="page-title">Notre équipe</h1>
 
-    <div id="membresContainer"></div>
+    <div id="membresContainer">
+    <!-- loading icon from fontawesome -->
+    <div class="loaderBox">
+        <i class="fas fa-spinner fa-spin fa-3x" style="font-size:24px; color:black;"></i>
+     </div>
+    </div>
     <script type="module" src="{% static 'main/scripts/membres.js' %}"></script>
 
 </div>
