les images sont correctement recupérés mais l'affichage n'est pas géré

--- a/insaerospace/main/templates/main/accueil.html
+++ b/insaerospace/main/templates/main/accueil.html
@@ -32,7 +32,8 @@
         <div class="caroussel-image"
             style="background-image: url('{% static 'images/photos_accueil/minifusee_champ.webp' %}');"></div>
         <div class="caroussel-image" style="background-image: url('{% static 'images/photos_accueil/soudure.webp' %}');">
-        </div>        <div class="caroussel-image"
+        </div>        
+        <div class="caroussel-image"
             style="background-image: url('{% static 'images/photos_accueil/seance-1.webp' %}');">
         </div>
     </div>
