--- a/insaerospace/main/static/main/accueil.css
+++ b/insaerospace/main/static/main/accueil.css
@@ -45,7 +45,7 @@ header {
     text-align: center;
 
 
-    background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 100%);
+    /* background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 100%); */
     
   
 }
@@ -63,16 +63,58 @@ header {
 }
 
 
-.caroussel>div {
+.caroussel-image {
     min-width: 100%;
     height: 100vh;
     background-size: cover;
     background-position: center;
-
     scroll-snap-align: center;
+    opacity: 0; /* Caché par défaut */
+    transition: opacity var(--transition-duration) ease-in-out; /* Animation de fondu */
+
+    /* animation: clignotement 2.5s infinite; */
+
+}
+
+.caroussel-image.fade-in {
+    opacity: 1;
+    animation: none;
+
+}
+
+#caroussel-container>div.loaderBox {
+    min-width: 100%;
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    scroll-snap-align: center;
+    /* ajouter animation de faible clignotement sur le background */
+    /* animation: clignotement 2.5s infinite; */
 
 
 }
+
+#caroussel-container.loading {
+    animation: clignotement 2.5s infinite;
+
+}
+
+@keyframes clignotement {
+    0% {
+        background-color: rgba(255, 255, 255, 0);
+    }
+    50% {
+        background-color: rgba(255, 255, 255, 0.1);
+    }
+    100% {
+        background-color: rgba(255, 255, 255, 0);
+    }
+}
+
+
+
+
+
 
 .caroussel::-webkit-scrollbar {
     width: 0px;
