--- a/insaerospace/main/templates/main/accueil.html
+++ b/insaerospace/main/templates/main/accueil.html
@@ -17,8 +17,15 @@
         <h2><span class="logo-red-part">INSA</span>erospace</h2>
         <p>Association d'étudiants ingénieurs passionnés d'aérospatiale de l'INSA Hauts-de-France</p>
     </div>
-    <div class="caroussel" id="caroussel-container">
+    <div class="caroussel loading" id="caroussel-container">
         <!-- Les images seront ajoutées ici par JavaScript -->
+
+        <!-- fausse image en attendant le chargement -->
+         <!-- loading icon from fontawesome -->
+     <div class="loaderBox">
+        <!-- <i class="fas fa-spinner fa-spin fa-3x" style="font-size:24px; color:white;"></i> -->
+     </div>
+
     </div>
    
     <div class="stats">
