feat: add contact page and related functionality

--- a/insaerospace/main/templates/main/base.html
+++ b/insaerospace/main/templates/main/base.html
@@ -29,7 +29,7 @@
                 <ul>
                     <a href="{% url 'nos-projets' %}"><i class="fa-solid fa-caret-right mobile-only"></i> Nos Projets</a>
                     <a href="{% url 'nos-membres'%}"><i class="fa-solid fa-caret-right mobile-only"></i> La team</a>
-                    <a href="#"><i class="fa-solid fa-caret-right mobile-only"></i> Nous contacter</a>
+                    <a href="{% url 'contact'%}"><i class="fa-solid fa-caret-right mobile-only"></i> Nous contacter</a>
                 </ul>
             </nav>
             <div id="hamburger-button" class="mobile-only" onclick="toggleNavMenu()" tabindex="0"><i class="fa-solid fa-bars" ></i></div>
