feat: add emoji images and update contact page layout

--- a/insaerospace/main/static/main/contact-page.css
+++ b/insaerospace/main/static/main/contact-page.css
@@ -13,3 +13,11 @@ div.membres {
         box-shadow: none;
     }
 }
+
+
+#contactContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
