--- a/insaerospace/main/templates/main/contact.html
+++ b/insaerospace/main/templates/main/contact.html
@@ -16,7 +16,7 @@
 <div class="classic-page-margin">
     <h1 class="page-title">Contact</h1>
 
-    <div id="contactContainer" class="article-body">
+    <div id="contactContainer">
         <!-- loading icon from fontawesome -->
 
     </div>
@@ -25,7 +25,7 @@
             <h2>Remerciements</h2>
             <p>Ce site a été développé avec ❤️ par <a href="http://insash.org">./insa.sh - Le Club Info de l'INSA
                     Hauts-de-France</a> !</p>
-            <h3>Développement & Design</h3>
+            <h2>Développement & Design</h2>
 
 
         </div>
@@ -35,20 +35,20 @@
                 <div class="photo-de-profil">
                     <img src="http://localhost:1337/uploads/default_pp_a375f13862.png" alt="Maël Advisse">
                     <div class="emoji-box">
-                        <img class="emoji1" src="emoji_url_here">
-                        <img class="emoji2" src="emoji_url_here">
-                        <img class="emoji3" src="emoji_url_here">
-                        <img class="emoji4" src="emoji_url_here">
-                        <img class="emoji5" src="emoji_url_here">
+                        <img class="emoji1" src="{% static 'images/local/emoji/clavier.png' %}">
+                        <img class="emoji2" src="{% static 'images/local/emoji/souris.png' %}">
+                        <img class="emoji3" src="{% static 'images/local/emoji/ordinateur.png' %}">
+                        <img class="emoji4" src="{% static 'images/local/emoji/programmeur.png' %}">
+                        <img class="emoji5" src="{% static 'images/local/emoji/palette.png' %}">
                     </div>
                 </div>
                 <h3>Maël Advisse</h3>
-                <p class="role">Directeur Technique</p>
+                <p class="role">Développeur</p>
                 <div class="reseaux">
-                    <a href="https://instagram.com/mael" target="_blank">
+                    <a href="https://instagram.com/" target="_blank">
                         <i class="fa-brands fa-instagram reseau-icon"></i>
                     </a>
-                    <a href="https://linkedin.com/in/mael" target="_blank">
+                    <a href="https://linkedin.com/in/" target="_blank">
                         <i class="fa-brands fa-linkedin reseau-icon"></i>
                     </a>
                 </div>
@@ -57,21 +57,24 @@
                 <div class="photo-de-profil">
                     <img src="http://localhost:1337/uploads/default_pp_a375f13862.png" alt="Louison Bednarowicz">
                     <div class="emoji-box">
-                        <img class="emoji1" src="emoji_url_here">
-                        <img class="emoji2" src="emoji_url_here">
-                        <img class="emoji3" src="emoji_url_here">
-                        <img class="emoji4" src="emoji_url_here">
-                        <img class="emoji5" src="emoji_url_here">
+                        <img class="emoji1" src="{% static 'images/local/emoji/clavier.png' %}">
+                        <img class="emoji2" src="{% static 'images/local/emoji/souris.png' %}">
+                        <img class="emoji3" src="{% static 'images/local/emoji/ordinateur.png' %}">
+                        <img class="emoji4" src="{% static 'images/local/emoji/programmeur.png' %}">
+                        <img class="emoji5" src="{% static 'images/local/emoji/palette.png' %}">
                     </div>
                 </div>
                 <h3>Louison Bednarowicz</h3>
                 <p class="role">Développeur</p>
                 <div class="reseaux">
-                    <a href="https://instagram.com/louison" target="_blank">
-                        <i class="fa-brands fa-instagram reseau-icon"></i>
+                    <a href="https://github.com/billyTheSecond" target="_blank">
+                        <i class="fa-brands fa-github reseau-icon"></i>
                     </a>
-                    <a href="https://linkedin.com/in/louison" target="_blank">
+                    <a href="https://linkedin.com/in/louisonbednarowicz" target="_blank">
                         <i class="fa-brands fa-linkedin reseau-icon"></i>
+                    </a>
+                    <a href="https://webdev.knowitbetter.fr" target="_blank">
+                        <i class="fa-solid fa-globe reseau-icon"></i>
                     </a>
                 </div>
             </div>
