fix: Note to myself: ne pas oublier d'inclure la correction du bug dans le commit avant de commit :) - La taille de police fonctionne maintenant (cf commit #bdfab39)

--- a/insaerospace/main/static/main/accueil.css
+++ b/insaerospace/main/static/main/accueil.css
@@ -158,8 +158,10 @@ header {
 .stats {
     height: 150px;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: center;
+    gap: 40px;
     align-items: center;
     margin: 80px 120px 160px 120px;
 }
