fix: ajustements de la largeur pour une meilleure responsivité des articles et des pages de contact

--- a/insaerospace/main/static/main/contact-page.css
+++ b/insaerospace/main/static/main/contact-page.css
@@ -19,5 +19,16 @@ div.membres {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
     
+}
+
+#contactContainer>.article-body {
+    width: 100%;
+}
+
+#mandatoryContainer {
+    margin-bottom: 180px;
+    max-width: 900px;
+    width: 100%;
 }
