--- a/insaerospace/main/static/main/article.css
+++ b/insaerospace/main/static/main/article.css
@@ -255,6 +255,7 @@ div.article {
     align-self: center;
 
     max-width: 900px;
+    width: 100%;
     display: flex;
     flex-direction: column;
 
