--- a/insaerospace/main/static/main/base.css
+++ b/insaerospace/main/static/main/base.css
@@ -90,6 +90,9 @@ h2 {
 
 .classic-page-margin {
     margin: 0 4vw;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 
