--- a/insaerospace/main/templates/main/accueil.html
+++ b/insaerospace/main/templates/main/accueil.html
@@ -81,6 +81,7 @@
                 </ul>
             </div>
         </div>
+        <a href="nos-projets" type="button">Tous nos projets</a>
 
 
         <h2>Nos objectifs :</h2>
@@ -112,6 +113,13 @@
         </p>
 
         <h2>Quand se retrouver ?</h2>
+        <div class="flex" id="socials">
+            <a href="http://instagram.com/insaerospace" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <!-- <a href="http://facebook.com/insaerospace" target="_blank"><i class="fa-brands fa-facebook"></i></a> -->
+            <a href="http://www.linkedin.com/company/insaerospace" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            <!-- <a href="http://youtube.com/insaerospace" target="_blank"><i class="fa-brands fa-youtube"></i></a> -->
+        </div>
+
         <p>
             Nos séances se tiennent le <strong>jeudi après-midi</strong>, généralement en salle de travaux pratiques (selon
             disponibilités). <strong>Aucune obligation</strong>. INSAerospace ne vous impose rien, cela doit être un loisir pour vous.
