--- a/insaerospace/main/templates/main/contact.html
+++ b/insaerospace/main/templates/main/contact.html
@@ -22,9 +22,11 @@
     </div>
     <div id="mandatoryContainer">
         <div class="article-body">
+            <h2>Hébergement et nom de domaine</h2>
+            <p>Le site <a href="https://insaerospace.com">insaerospace.com</a> est hébergé sur <a href="https://hebergos.insash.org" targer="_blank">HebergOS - Le serveur associatif de ./insa.sh</a> via Hetzner.</p>
+            <p>Le nom de domaine est enregistré chez le registar Squarespace.</p>
             <h2>Remerciements</h2>
-            <p>Ce site a été développé avec ❤️ par <a href="http://insash.org">./insa.sh - Le Club Info de l'INSA
-                    Hauts-de-France</a> !</p>
+            <p>Ce site a été développé bénévolement avec ❤️ par <a href="https://insash.org" target="_blank">./insa.sh - Le Club Info de l'INSA Hauts-de-France</a> !</p>
             <h2>Développement & Design</h2>
 
 
