--- a/insaerospace/main/static/main/base.css
+++ b/insaerospace/main/static/main/base.css
@@ -102,6 +102,32 @@ strong {
 }
 
 
+/* bouttons */
+
+button, a[type="button"] {
+    font-family: "Raleway";
+    font-size: 16px;
+    font-weight: 700;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    background-color: var(--red-insaerospace);
+    color: white !important;
+    text-align: center;
+    width: fit-content;
+
+    align-self: center;
+
+    transition: all var(--transition-duration) !important;
+}
+
+button:hover, a[type="button"]:hover {
+    background-color: var(--red-insaerospace-hover);
+}
+
+
 
 
 
@@ -256,6 +282,14 @@ footer {
     padding-bottom: 20px;
     gap: 12px;
     color: #fff;
+}
+
+footer a {
+    color: inherit;
+    text-decoration: none;
+    font-family: inherit;
+    font-size: inherit;
+    font-weight: inherit;
 }
 
 .insaerospace {
