feat: mise à jour des images de profil et des liens des réseaux sociaux sur la page de contact des développeurs

--- a/insaerospace/main/templates/main/contact.html
+++ b/insaerospace/main/templates/main/contact.html
@@ -35,7 +35,7 @@
         <div class="membres">
             <div class="membre">
                 <div class="photo-de-profil">
-                    <img src="http://localhost:1337/uploads/default_pp_a375f13862.png" alt="Maël Advisse">
+                    <img src="{% static 'images/local/dev_pictures/dev1.png' %}" alt="Maël Advisse">
                     <div class="emoji-box">
                         <img class="emoji1" src="{% static 'images/local/emoji/clavier.png' %}">
                         <img class="emoji2" src="{% static 'images/local/emoji/souris.png' %}">
@@ -47,17 +47,20 @@
                 <h3>Maël Advisse</h3>
                 <p class="role">Développeur</p>
                 <div class="reseaux">
-                    <a href="https://instagram.com/" target="_blank">
+                    <a href="https://github.com/maeladv" target="_blank">
+                        <i class="fa-brands fa-github reseau-icon"></i>
+                    </a>
+                    <a href="https://instagram.com/mael_adv" target="_blank">
                         <i class="fa-brands fa-instagram reseau-icon"></i>
                     </a>
-                    <a href="https://linkedin.com/in/" target="_blank">
+                    <a href="https://www.linkedin.com/in/mael-advisse-13b360292/" target="_blank">
                         <i class="fa-brands fa-linkedin reseau-icon"></i>
                     </a>
                 </div>
             </div>
             <div class="membre">
                 <div class="photo-de-profil">
-                    <img src="http://localhost:1337/uploads/default_pp_a375f13862.png" alt="Louison Bednarowicz">
+                    <img src="{% static 'images/local/dev_pictures/dev2.png' %}" alt="Louison Bednarowicz">
                     <div class="emoji-box">
                         <img class="emoji1" src="{% static 'images/local/emoji/clavier.png' %}">
                         <img class="emoji2" src="{% static 'images/local/emoji/souris.png' %}">
