feat: favicon et logo par défaut si le backend est down (pas d'erreur, le site s'affiche avec le contenu par défaut)

--- a/insaerospace/main/templates/main/base.html
+++ b/insaerospace/main/templates/main/base.html
@@ -9,6 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="{% static 'main/base.css' %}">
         <link rel="shortcut icon" href="{{ favicon }}" type="image/svg+xml">
+        <link rel="icon" href="{{ favicon }}" type="image/svg+xml">
 
         <!-- icons -->
         <script src="https://kit.fontawesome.com/51918b7d55.js" crossorigin="anonymous"></script>
