fix: fix le lien hardcodé de l'image pp par défaut

--- a/insaerospace/main/templates/main/nos-membres.html
+++ b/insaerospace/main/templates/main/nos-membres.html
@@ -10,6 +10,9 @@
 
 {% block content %}
 <div class="classic-page-margin">
+    <script>
+        const static_default_pp_url = "{% static 'images/default_pp.webp' %}";
+    </script>
     <h1 class="page-title">Notre équipe</h1>
 
     <div id="membresContainer">
