Ajout du support de la description du site

--- a/insaerospace/main/templates/main/accueil.html
+++ b/insaerospace/main/templates/main/accueil.html
@@ -16,7 +16,7 @@
 <section>
     <div id="caroussel-text-content">
         <h2><span class="logo-red-part">INSA</span>erospace</h2>
-        <p>Association d'étudiants ingénieurs passionnés d'aérospatiale de l'INSA Hauts-de-France</p>
+        <p>{{site_description}}</p>
     </div>
     <div class="caroussel loading" id="caroussel-container">
         <!-- Les images seront ajoutées ici par JavaScript -->
