--- a/insaerospace/main/templates/main/contact.html
+++ b/insaerospace/main/templates/main/contact.html
@@ -21,12 +21,23 @@
 
     </div>
     <div id="mandatoryContainer">
+        <h2>Nos réseaux !</h2>
+        <div class="flex socials">
+            <a href="https://instagram.com/insaerospace" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <!-- <a href="http://facebook.com/insaerospace" target="_blank"><i class="fa-brands fa-facebook"></i></a> -->
+            <a href="https://www.linkedin.com/company/insaerospace" target="_blank"><i
+                    class="fa-brands fa-linkedin"></i></a>
+            <!-- <a href="http://youtube.com/insaerospace" target="_blank"><i class="fa-brands fa-youtube"></i></a> -->
+        </div>
         <div class="article-body">
             <h2>Hébergement et nom de domaine</h2>
-            <p>Le site <a href="https://insaerospace.com">insaerospace.com</a> est hébergé sur <a href="https://hebergos.insash.org" targer="_blank">HebergOS - Le serveur associatif de ./insa.sh</a> via Hetzner.</p>
+            <p>Le site <a href="https://insaerospace.com">insaerospace.com</a> est hébergé sur <a
+                    href="https://hebergos.insash.org" targer="_blank">HebergOS - Le serveur associatif de ./insa.sh</a>
+                via Hetzner.</p>
             <p>Le nom de domaine est enregistré chez le registar Squarespace.</p>
             <h2>Remerciements</h2>
-            <p>Ce site a été développé bénévolement avec ❤️ par <a href="https://insash.org" target="_blank">./insa.sh - Le Club Info de l'INSA Hauts-de-France</a> !</p>
+            <p>Ce site a été développé bénévolement avec ❤️ par <a href="https://insash.org" target="_blank">./insa.sh -
+                    Le Club Info de l'INSA Hauts-de-France</a> !</p>
             <h2>Développement & Design</h2>
 
 
