--- a/insaerospace/main/static/main/contact-page.css
+++ b/insaerospace/main/static/main/contact-page.css
@@ -32,3 +32,25 @@ div.membres {
     max-width: 900px;
     width: 100%;
 }
+
+
+.socials {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 40px;
+}   
+
+.socials>a {
+    color: var(--red-insaerospace);
+    font-size: 42px;
+
+    transition: all 0.1s ease-in-out;
+}
+
+.socials>a:hover {
+    transform: scale(1.05);
+    opacity: 0.8;
+}
