--- a/insaerospace/main/templates/main/accueil.html
+++ b/insaerospace/main/templates/main/accueil.html
@@ -113,9 +113,9 @@
 
         <h2>Quand se retrouver ?</h2>
         <div class="flex" id="socials">
-            <a href="http://instagram.com/insaerospace" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://instagram.com/insaerospace" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             <!-- <a href="http://facebook.com/insaerospace" target="_blank"><i class="fa-brands fa-facebook"></i></a> -->
-            <a href="http://www.linkedin.com/company/insaerospace" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/company/insaerospace" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
             <!-- <a href="http://youtube.com/insaerospace" target="_blank"><i class="fa-brands fa-youtube"></i></a> -->
         </div>
 
