fix:give some title tags to the landing page links

--- a/insaerospace/main/templates/main/accueil.html
+++ b/insaerospace/main/templates/main/accueil.html
@@ -80,7 +80,7 @@
                 </ul>
             </div>
         </div>
-        <a href="nos-projets" type="button">Tous nos projets</a>
+        <a href="nos-projets" type="button" title="Voir tous nos projets">Tous nos projets</a>
 
 
         <h2>Nos objectifs :</h2>
@@ -113,9 +113,9 @@
 
         <h2>Quand se retrouver ?</h2>
         <div class="flex" id="socials">
-            <a href="https://instagram.com/insaerospace" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://instagram.com/insaerospace" target="_blank" title="Aller sur notre page Instagram"><i class="fa-brands fa-instagram"></i></a>
             <!-- <a href="http://facebook.com/insaerospace" target="_blank"><i class="fa-brands fa-facebook"></i></a> -->
-            <a href="https://www.linkedin.com/company/insaerospace" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/company/insaerospace" target="_blank" title ="Aller sur notre page LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
             <!-- <a href="http://youtube.com/insaerospace" target="_blank"><i class="fa-brands fa-youtube"></i></a> -->
         </div>
 
