--- a/insaerospace/main/templates/main/base.html
+++ b/insaerospace/main/templates/main/base.html
@@ -2,9 +2,10 @@
 
 <!DOCTYPE html>
 
-<html>
+<html lang="fr-FR">
     <head>
         <meta charset="utf-8">
+        
         <title>{% block title %}{% endblock %} | {{ site_name }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="{% static 'main/base.css' %}">
