fix: just gave the landing page a better meta title

--- a/insaerospace/main/templates/main/accueil.html
+++ b/insaerospace/main/templates/main/accueil.html
@@ -1,7 +1,7 @@
 {% extends "main/base.html" %}
 {% load static %}
 
-{% block title %}Accueil{% endblock %}
+{% block title %}Association d'aérospatiale de l'INSA HdF{% endblock %}
 
 {% block extrahead %}
 <link rel="stylesheet" type="text/css" href="{% static 'main/accueil.css' %}">
