feat: AJout de balises de référencement aux pages nos-projets, nos-membres, contact et c'est déjà bien.

--- a/insaerospace/main/templates/main/contact.html
+++ b/insaerospace/main/templates/main/contact.html
@@ -5,6 +5,21 @@
 
 
 {% block extrahead %}
+<!-- SEO -->
+<meta name="description" content="Contactez-nous pour en savoir plus sur nos projets et notre équipe.">
+<meta name="keywords" content="INSAerospace, contact, association, étudiants, fusée, aérospatiale, INSA, Hauts-de-France">
+<link rel="canonical" href="https://insaerospace.com/contact">
+<!-- Open Graph -->
+<meta property="og:title" content="Contact - INSAerospace">
+<meta property="og:description" content="Contactez-nous pour en savoir plus sur nos projets et notre équipe.">
+<meta property="og:image" content="{% static 'images/sharing/og-image.png' %}">
+<meta property="og:url" content="https://insaerospace.com/contact">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="INSAerospace">
+<meta property="og:locale" content="fr_FR">
+
+
+
 <link rel="stylesheet" href="{% static 'main/article.css' %}">
 <link rel="stylesheet" href="{% static 'main/contact-page.css' %}">
 <link rel="stylesheet" href="{% static 'main/membres.css' %}">
