--- a/insaerospace/main/templates/main/nos-membres.html
+++ b/insaerospace/main/templates/main/nos-membres.html
@@ -5,6 +5,18 @@
 
 
 {% block extrahead %}
+<!-- SEO -->
+<meta name="description" content="Découvrez notre équipe talentueuse et passionnée.">
+<meta name="keywords" content="INSAerospace, membres, équipe, étudiants, fusée, aérospatiale, INSA, Hauts-de-France">
+<link rel="canonical" href="https://insaerospace.com/nos-membres">
+<!-- Open Graph -->
+<meta property="og:title" content="Nos membres - INSAerospace">
+<meta property="og:description" content="Découvrez notre équipe talentueuse et passionnée de l'association INSAerospace.">
+<meta property="og:image" content="{% static 'images/sharing/og-image.png' %}">
+<meta property="og:url" content="https://insaerospace.com/nos-membres">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="INSAerospace">
+<meta property="og:locale" content="fr_FR">
 <link rel="stylesheet" href="{% static 'main/membres.css' %}">
 {% endblock %}
 
