--- a/insaerospace/main/templates/main/nos-projets.html
+++ b/insaerospace/main/templates/main/nos-projets.html
@@ -5,6 +5,19 @@
 
 
 {% block extrahead %}
+<!-- SEO -->
+<meta name="description" content="Découvrez nos projets et rejoignez notre équipe.">
+<meta name="keywords" content="INSAerospace, projets, association, étudiants, fusée, aérospatiale">
+<link rel="canonical" href="https://insaerospace.com/nos-projets">
+<!-- Open Graph -->
+<meta property="og:title" content="Nos Projets - INSAerospace">
+<meta property="og:description" content="Découvrez nos projets et rejoignez notre équipe.">
+<meta property="og:image" content="{% static 'images/sharing/og-image.png' %}">
+<meta property="og:url" content="https://insaerospace.com/nos-projets">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="INSAerospace">
+<meta property="og:locale" content="fr_FR">
+
 <link rel="stylesheet" href="{% static 'main/article.css' %}">
 {% endblock %}
 
